--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			}
 			nav{
 				background: #E6EE9C; /* For browsers that do not support gradients */
-				background: -webkit-linear-gradient(left, #FFC3BE, #F48FB1,#F06292); /* For Safari 5.1 to 6.0 */
-				background: -o-linear-gradient(left, #FFC3BE, #F48FB1,#F06292); /* For Opera 11.1 to 12.0 */
-				background: -moz-linear-gradient(left, #FFC3BE, #F48FB1,#F06292); /* For Firefox 3.6 to 15 */
-				background: linear-gradient(left, #FFC3BE, #F48FB1,#F06292); /* Standard syntax */
+				background: -webkit-linear-gradient(left, #FFC3BE,#F8E4CC); /* For Safari 5.1 to 6.0 */
+				background: -o-linear-gradient(left, #FFC3BE,#F8E4CC); /* For Opera 11.1 to 12.0 */
+				background: -moz-linear-gradient(left, #FFC3BE,#F8E4CC); /* For Firefox 3.6 to 15 */
+				background: linear-gradient(left, #FFC3BE,#F8E4CC); /* Standard syntax */
 				color: #FCE4EC;
 				border-bottom: .25em solid #AD1457;
 			}
@@ -40,7 +40,7 @@
 			}
 			.nav li a{
 				color: white;
-				font-weight: bold;
+				font-weight: bolder;
 				letter-spacing: .1em;
 			}
 			
@@ -54,7 +54,7 @@
 			
 			.middle-body{
 				background-color: white;
-				padding-top: 140px;
+				padding-top: 9em;
 				padding-bottom: 50px;
 			}
 			.comp-title{
@@ -68,9 +68,9 @@
 	</head>
 	
 	<body class="grad">
-		<nav class="nav nav-justified float-left" style="position: fixed;top: 0px; z-index: 100;">
+		<nav class="nav nav-justified float-left" style="position: fixed;top: 0px; z-index: 100;width: 100%;">
 			<h2 class="comp-title"><span style="color: #FF80AB;">POSH</span><span style="color: #F1F8E9;">TOOSH </span></h2>
-			<ul class="nav nav-pills navbar-toggler-left" >
+			<ul class="nav nav-pills navbar-toggler-left" style="float: right;" >
 				<li role="presentation" ><a href="#">Home</a></li>
 				<li role="presentation" ><a href="#">Products</a></li>
 				<li role="presentation" ><a href="#">About Us</a></li>
@@ -81,30 +81,35 @@
 		</nav>
 		<div class="container middle-body">
 			<!-- <div class="row">
-					<div class="col-md-6">
-							<hr style="background-color: red;height: 2px; "  />
-					</div>
-					<div class="col-md-6">
-							<hr style="background-color: skyblue;height: 2px;" >
-					</div>
+						<div class="col-md-6">
+									<hr style="background-color: red;height: 2px; "  />
+						</div>
+						<div class="col-md-6">
+									<hr style="background-color: skyblue;height: 2px;" >
+						</div>
 			</div> -->
 			<div class="row">
-				<div class="col-md-2 text-center" >
-					<div style="background-color : #F8BBD0; height: 60%;position: fixed; z-index: 100;">
-						<h4>Menu</h4>
-						<hr />
-						<ul>
-							<li>Men</li>
-							<li>Women</li>
-						</ul>
-					</div>
+				<div class="col-md-12">
+					<hr style="background-color:skyblue;height: 1px; margin: .25em !important;"  />
+					<img src="image-comp.jpeg" width="100%" height="300px" class="image-responsive">
+					<hr style="background-color:red;height: 1px; margin: .25em !important;"  />
 				</div>
+			</div>
+			<div class="row">
+				<!-- <div class="col-md-2 text-center" >
+						<div style="background-color : #F8BBD0; height: 60%;position: fixed; z-index: 100;">
+								<h4>Menu</h4>
+								<hr />
+								<ul>
+										<li>Men</li>
+										<li>Women</li>
+								</ul>
+						</div>
+				</div> -->
 				<div class="col-md-10">
 					<div class="row">
 						<div class="col-md-12">
-						<hr style="background-color:skyblue;height: 1px; margin: .25em !important;"  />
 							<div align="text-center" style="font-weight: bold;padding: 0 40%;font-size: 1.5em;"> Shawl</div>
-							<hr style="background-color:red;height: 1px; margin: .25em !important;"  />
 							<div  class="main-item-coursel">
 								<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 								<img src="images.jpg" width="150px" height="150px" class="img-thumbnail"/>
@@ -159,7 +164,8 @@
 		<footer class="container-fluid" >
 			<div class="row">
 				<div class="col-md-12 animated fadeInLeft sections" >
-					<h4>FootPrint</h4>
+					<h4><span style="color: #FF80AB;">POSH</span><span style="color: #F1F8E9;">TOOSH </span></h4>
+					<hr style="background-color: red;height: 1px;color: red; "  />
 					<p style="font-size: 10px;" >We are the best in the quality. We work on the process of no cheat and fair price.</p>
 				</div>
 			</div>
