--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<hr style="background-color:skyblue;height: 1px; margin: .25em !important;"  />
-					<img src="image-comp.jpeg" width="100%" height="300px" class="image-responsive">
+					<img src="mainimg.jpg" width="100%" height="300px" class="image-responsive">
 					<hr style="background-color:red;height: 1px; margin: .25em !important;"  />
 				</div>
 			</div>
